# CEK-DEBUGGER

./: .gitignore  Cargo.toml  README.md  create_uplc.bat  create_uplc.py  create_uplc.sh  test.uplc
crates/uplc/: NOTICE.txt
crates/uplc/src/: flat.rs  machine.rs
crates/uplc/src/machine/: debug.rs
src/: analyzer.rs  diagnostics.rs  error_interpreter.rs  executor.rs  frames.rs  lib.rs  loader.rs  main.rs  reporter.rs  uplc_file_utils.rs
tests/: executor_tests.rs  integration_tests.rs  proptest_checks.rs
